--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>15.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
