Добавлен новый .feature сценарий.

--- a/src/test/resources/configRTS.properties
+++ b/src/test/resources/configRTS.properties
@@ -1,4 +1,5 @@
 mainRtsPage = https://www.rts-tender.ru/
+search223Page = https://www.rts-tender.ru/poisk/poisk-223-fz/
 browser = chrome
 holdBrowserOpen = true
 startMaximized = true
